// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CancelResumeConfirm renders CANCEL modal 1`] = `
<ActionConfirmation
  abortAction="No"
  closeModal={[Function]}
  confirmAction="Yes"
  message="This will stop 3 tasks, putting them in the canceled state.  Are you sure?"
  onClick={[Function]}
  showModal={true}
  title="Cancel Selected Tasks"
/>
`;

exports[`CancelResumeConfirm renders CLOSED modal 1`] = `
<ActionConfirmation
  abortAction="No"
  closeModal={[Function]}
  confirmAction="Yes"
  message="This will resume 3 tasks, putting them in the running state.  Are you sure?"
  onClick={[Function]}
  showModal={false}
  title="Resume Selected Tasks"
/>
`;

exports[`CancelResumeConfirm renders RESUME modal 1`] = `
<ActionConfirmation
  abortAction="No"
  closeModal={[Function]}
  confirmAction="Yes"
  message="This will resume 3 tasks, putting them in the running state.  Are you sure?"
  onClick={[Function]}
  showModal={true}
  title="Resume Selected Tasks"
/>
`;
